Changes for 3.4.5rc1

New features:
..F....... [ZBX-12809] implemented overlay dialog centering using javascript (miks)

Bug fixes:
..F....... [ZBX-12082] fixed possibility to select triggers with same name in multiselect (Ivo)
........S. [ZBX-9567] added missing fields to webscenario data handling (valdis)
..F....... [ZBX-11051] fixed displaying highest severity when dashboard filter options contain unacknowledged only (Ivo)
........S. [ZBX-12978] improved performance of preprocessor manager, alert manager/worker, IPMI manager/poller by reducing frequency of log rotation checks that handle stdout/stderr (vso)
........S. [ZBX-12936] improved SQL performance by updating proxy last access in bulks (vso)
.....J.... [ZBX-12705] added check for collisions and unsupported characters in macro names in jmx.discovery (vjaceslavs)
........S. [ZBX-12970] fixed processing of alerts when related event is removed (vso)
...G...... [ZBX-12544] fixed compilation warnings (valdis)

--------------------------------------------------------------------------------
Changes for 3.4.4

3.4.4rc1 was released as 3.4.4 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.4rc1

New features:
..F....... [ZBXNEXT-1421] added service sorting by name if multiple services has same 'sortorder' value (miks)
...G...... [ZBXNEXT-3493] added Windows service configuration check to determine if service can be trigger started (andris, viktors)
..F....... [ZBXNEXT-4019] implemented default widget refresh interval (Ivo)
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes:
..F....... [DEV-593] fixed multiple security issues (miks)
........S. [ZBX-12874] fixed target list to be meaningless if custom set of commands is executed on zabbix server (vso)
........S. [ZBX-12936] fixed update proxy lastaccess value when receiving data (valdis)